fix overflow bug

--- a/app/me/workouts/[id]/UserWorkout.module.scss
+++ b/app/me/workouts/[id]/UserWorkout.module.scss
@@ -38,7 +38,7 @@
             padding-inline: 2rem;
             padding-block: 1rem;
             display: flex;
-            flex: 1;
+            // flex: 1;
             justify-content: center;
 
             .exercisePageHeaderInfoContent {
